# bintail

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  arch-x86.cpp  arch.h  bintail.cpp  bintail.h  check-guard.sh  desc  main.cpp  mvelem.cpp  mvelem.h  mvpp.cpp  mvpp.h  mvscn.cpp  mvvar.cpp  mvvar.h  read_secs_off.sh  test.sh  tests
_measure/: bintail-bss-nolib  bintail-bss-nolib-patched  bintail-mvcommit-patched  bintail-no-lib  bintail-no-lib-patched  bintail-simple  bintail-simple-patched  grep  grep-patched  multiverse-commit-refs  multiverse-commit-refs-patched  multiverse-enums  multiverse-enums-patched  multiverse-enums-simple  multiverse-enums-simple-patched  multiverse-extern-definition  multiverse-function-pointer  multiverse-guess-integral-value  multiverse-guess-integral-value-patched  multiverse-invalid-value  multiverse-invalid-value-patched  multiverse-lvalue  multiverse-mvfn-reduction  multiverse-mvfn-reduction-patched  multiverse-no-reference-in-mv-func  multiverse-one-variable  multiverse-one-variable-gcc-bool  multiverse-one-variable-gcc-bool-patched  multiverse-one-variable-patched  multiverse-revert  multiverse-revert-patched  multiverse-special-mvfns  multiverse-special-mvfns-patched  multiverse-static_function  multiverse-static_var_optimize  multiverse-struct_in_mv_func  multiverse-tracked  multiverse-tracked-patched  multiverse-two-tracked-variables  multiverse-user-values  (+1 more)
samples/: CMakeLists.txt  Makefile  bss-nolib.c  busybox  commit.c  mvcommit  mvcommit.c  no-lib.c  simple.c
src/: CMakeLists.txt  bintail.cpp  bintail.h  main.cpp  mvelem.cpp  mvelem.h  mvscn.cpp  testlib.cpp
tools/: callsite-check.py  guard-check.r2  measure.sh
